@@ -68,16 +68,4 @@
             <version>${slf4j.version}</version> 
         </dependency>
     </dependencies>
-    <build>
-	    <plugins>
-	      <plugin>
-	        <groupId>org.apache.maven.plugins</groupId>
-	        <artifactId>maven-compiler-plugin</artifactId>
-	        <configuration>
-	          <source>1.7</source>
-	          <target>1.7</target>
-	        </configuration>
-	      </plugin>
-	    </plugins>
-    </build>
 </project>
