@@ -5,6 +5,7 @@ V1.3.3 2015-11-4
 		2005-11-19 mzhao
 	- Specify java compilation version 1.7 in pom.xml 
 	- Remove the singleton of DateTimeManager, and rename it to SystemDatetimeManager
+	- Add setParameter , addParameters and related remove methods.
 
 V1.3.2 2015-10-29
 	- TDQ-10903 optimize dictionaries
